replaces thread with a virtual thread