@@ -12,20 +12,20 @@ public class SimpleWsHandler extends TextWebSocketHandler {
     protected void handleTextMessage(WebSocketSession session, TextMessage msg) throws IOException {
         System.out.println("Server received a message: " + msg.getPayload());
 
-        new Thread(() -> {
+        Thread.startVirtualThread(() -> {
             try {
                 for (int i = 1; i <= 10; i++) {
                     if (!session.isOpen()) return;
                     TextMessage textMessage = new TextMessage("PONG " + i);
 
                     session.sendMessage(textMessage);
-                    System.out.println("Server sent: %s".formatted(textMessage.getPayload()) );
+                    System.out.println("Server sent: %s".formatted(textMessage.getPayload()));
                     Thread.sleep(1000);
                 }
             } catch (Exception e) {
                 e.printStackTrace();
             }
-        }).start();
+        });
     }
 
 }
